# magic_event

./: .gitignore  CMakeLists.txt  LICENSE
include/magic_event/: acceptor.h  channel.h  connection.h  looper.h  server.h  socket.h  timer.h  timer_list.h
include/magic_event/poller/: poll_event.h  poller.h  poller_epoll_impl.h  poller_kqueue_impl.h
include/magic_event/utils/: time_utils.h
src/magic_event/: acceptor.cc  connection.cc  looper.cc  server.cc  timer_list.cc
src/magic_event/poller/: poller_epoll_impl.cc  poller_kqueue_impl.cc
src/magic_event/utils/: time_utils.cc
test/: acceptor_test.cc  debug.cc  looper_test.cc  server_test.cc
